syntax = "proto3";

import "google/protobuf/empty.proto";

package grpc_2pc;

option go_package = ".";

service TwoPhaseCommitService {
    rpc CreateAccount(CreateAccountRequest) returns (Response);
    rpc DeleteAccount(DeleteAccountRequest) returns (Response);
    rpc ReadAccount(ReadAccountRequest) returns (Response);
    rpc UpdateAccount(UpdateAccountRequest) returns (Response);
    rpc BeginTransaction(BeginTransactionRequest) returns (Response);
    rpc Commit(CommitRequest) returns (Response);
    rpc Abort(AbortRequest) returns (Response);
    rpc Reset(google.protobuf.Empty) returns (Response);
}
// if operation successed err is false and msg is "successed"
// of err is true and msg is the cause
message Response {
    string msg = 1;
}
// if account has been created, fail
message CreateAccountRequest {
    int32 account_id = 1;
}
// if account does not exsist, fail
message DeleteAccountRequest {
    int32 account_id = 1;
}
// if account does not exsist, fail
message ReadAccountRequest {
    int32 account_id = 1;
}
// set account's balance to the amount and the amonunt must >= 0
// if account does not exsist, fail
message UpdateAccountRequest {
    int32 account_id = 1;
    int32 amount = 2;
}
// trasnsaction id and account id must be saved in grpc server
//account balance must >= -amount
message BeginTransactionRequest {
    int32 account_id = 1;
    int32 amount = 2;
}
// do the saved operation and released saved ids 
message CommitRequest {
    int32 account_id = 1;
    int32 transaction_id = 2;
}
//do nothing but released saved ids
message AbortRequest {
    int32 account_id = 1;
}

